<resources>
    <string name="app_name">Ordering</string>

    <string name="action_settings">Settings</string>
    <string name="action_clean">Limpiar mesa</string>
    <string name="table_number_title">Mesa número %s</string>
    <string name="action_assign_fellows">Asignar número de comensales</string>
    <string name="action_clean_all">Limpiar todas las mesas</string>
    <string name="table_list_title">Listado de mesas</string>
    <string name="number_of_fellows_dialog_title">Introduce el número de comensales:</string>
    <string name="number_of_fellows_example">p.e.: 5</string>
    <string name="set_fellows_errors_hint">Por favor, asigna un valor numerico</string>
    <string name="number_of_fellows_format">Número de comensales: %d</string>
    <string name="number_of_fellows_hint_format">p.e.: %d</string>
    <string name="action_refresh_plates">Refresh plates</string>
    <string name="ingredients_example">Huevos, marisco, frutos secos</string>
    <string name="ingredients_title">Ingredientes:</string>
    <string name="plate_name_example">Ensalada mixta</string>
    <string name="action_add">Añadir plato</string>
    <string name="plates_downloaded">El menú ya está disponible</string>
    <string name="notes_example">Ejemplo de anotaciones para un plato en concreto. Alargamos el texto para ver como se adapta.</string>
    <string name="action_delete">Borrar plato</string>
    <string name="no_plates_added">No se ha añadido ningún plato</string>
    <string name="fellows">comensales</string>
    <string name="plates">platos</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="clean_all_tables_dialog_title">¿Desea limpiar todas las mesas?</string>
    <string name="clean_all_tables_dialog_message">Se perderán todos los datos (comensales, platos) y no se podrán recuperar</string>
    <string name="plate_title_example">Ensalada mixta</string>
    <string name="plate_notes_hint">Anotaciones específicas del plato</string>
    <string name="plate_notes_dialog_title">Peticiones especiales</string>
    <string name="notes_title">Notas</string>
    <string name="plate_added_snackbar_message">Plato añadido</string>
    <string name="allergens_title">Alérgenos</string>
    <string name="allergens_example">Huevo, marisco, frutos secos</string>
    <string name="plate_description">Esto es un ejemplo de una descripción de un plato. Vamos añadiendo líneas para que ocupe un poco mas y podamos atajar problemas de ese tipo</string>
    <string name="plate_description_title">Descripción:</string>
    <string name="plate_notes_title">Notas:</string>
    <string name="bill_format">%.2f €</string>
    <string name="content_description">Imagen no disponible</string>
</resources>
